--- a/15-puzzle.css
+++ b/15-puzzle.css
@@ -1,11 +1,17 @@
-td{
-	height: 50px;
-	width: 50px;
-	background-color: #ccee77;
-	
+.puzzleTd {
+	height: 75px;
+	width: 75px;
+	background-color: #ced;
+	border-radius: 5px;
+	font-size: 40px;
+	display: inline-block;
+	margin: 5px;
+	padding: auto;
+	line-height: 75px;
+	text-align: center;
+	vertical-align: middle;
+	box-shadow: 5px 5px 2px #888888;
 }
-.off{
-	height: 50px;
-	width: 50px;
-	
+.puzzleTable {
+	margin-top: 10px;
 }
